--- a/Portafolio_OAEA/appsettings.json
+++ b/Portafolio_OAEA/appsettings.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*,
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cadenaSql": "Server=.;database=PortafolioOAEA;Trusted_Connection=true;TrustServerCertificate=true"
-  },
-  "
+    "cadenaSql": "Server=DESKTOP-DBU6VEC\\MSSQLSERVER01;database=PortafolioOAEA;Trusted_Connection=true;TrustServerCertificate=true;"
+  }
+  
 }
